Fix Article alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,7 +7,7 @@
 @media only screen and (min-width: 800px) and (max-width: 991px) {
   .resp-vtabs .resp-tabs-container {
     margin-left: 13px;
-    width: 89%;
+    width: 88%;
   }
 }
 
