--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2713,7 +2713,7 @@ ul.info-post li {
 
 @media screen and (min-width:850px) and (max-width: 1200px)  {
     .resp-vtabs .resp-tabs-container {
-        width:89%;
+        width:88%;
     }
 }
 
